# CRuDeNet

./: LICENSE  README.md  requirements-cpu.txt  requirements-cuda.txt  setup.cfg
crudenet/: __init__.py  dataset.py  deepcad_test.py  deepcad_train.py  export.py  infer.py  model.py  train.py
crudenet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crudenet/deepcad/: __init__.py  test_collection.py  train_collection.py
examples/: full_pipeline.ipynb
