[metadata]
name = crudenet
version = 0.1.0
author = Nikhil Iyer
author_email = your.email@umn.edu
description = Real-time ConvGRU denoiser for microscopy volumes (RTV2)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/CRuDeNet
project_urls =
    Bug Tracker = https://github.com/yourusername/CRuDeNet/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    numpy
    tifffile
    tqdm
    matplotlib
    scikit-image
    pyyaml

[options.extras_require]
# Note: PyTorch CUDA installation is version-specific
# Install PyTorch with CUDA separately: https://pytorch.org/get-started/locally/
# Base install includes torch (CPU), but code auto-detects CUDA if available

[options.entry_points]
console_scripts =
    crudenet-train = crudenet.train:main
    crudenet-infer = crudenet.infer:main
    crudenet-export = crudenet.export:main
    deepcad-train = crudenet.deepcad_train:main
    deepcad-test = crudenet.deepcad_test:main


